# NDK

./: README.md
FirstLesson/doc/: cmake.md
FirstLesson/example1/app/src/androidTest/java/com/jiangc/example1/: ExampleInstrumentedTest.java
FirstLesson/example1/app/src/main/res/values-night/: themes.xml
FirstLesson/example1/app/src/test/java/com/jiangc/example1/: ExampleUnitTest.java
FirstLesson/example2/: CMakeLists.txt  test.h
FirstLesson/example3/example3/: settings.gradle
FirstLesson/example3/example3/app/: build.gradle
FirstLesson/example3/example3/app/src/main/: AndroidManifest.xml
FirstLesson/example3/example3/app/src/main/cpp/: native-lib.cpp
FirstLesson/example3/example3/app/src/main/res/values/: strings.xml
Lesson1/example1/app/src/main/cpp/: native-lib.cpp
Lesson1/example1/app/src/main/java/com/jiangc/example1/: MainActivity.java
Lesson1/example1/gradle/wrapper/: gradle-wrapper.properties
Lesson1/example2/: build.sh  test.cpp
Lesson1/example3/example3/app/include/: test.h
Lesson1/example3/example3/app/src/main/cpp/: CMakeLists.txt
Lesson1/example3/example3/app/src/main/res/values/: themes.xml
Lesson1/example3/example3/app/src/main/res/values-night/: themes.xml
Lesson1/example3/example3/gradle/wrapper/: gradle-wrapper.properties
Lesson10/: README.md  pthread_attr.c  pthread_cancel.c  pthread_create.c  pthread_detach.c  pthread_exit.c  pthread_self.c
Lesson2/example1/: CMakeLists.txt
Lesson2/example2/: settings.gradle
Lesson2/example2/app/src/main/: AndroidManifest.xml
Lesson2/example2/app/src/main/cpp/: native-lib.cpp
Lesson2/example2/app/src/main/cpp/test/include/: test.h
Lesson2/example2/app/src/main/cpp/test/src/: test.c
Lesson2/example2/app/src/main/res/values/: strings.xml  themes.xml
Lesson2/example2/app/src/main/res/values-night/: themes.xml
Lesson2/example2/gradle/wrapper/: gradle-wrapper.properties
Lesson3/doc/: doc.md
Lesson3/example1/: settings.gradle
Lesson3/example1/app/: build.gradle
Lesson3/example1/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Lesson3/example1/app/src/main/res/values/: themes.xml
Lesson3/example1/gradle/wrapper/: gradle-wrapper.properties
Lesson4/doc/: doc.md
Lesson4/example1/app/src/main/: AndroidManifest.xml
Lesson4/example1/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  test.c
Lesson4/example1/gradle/wrapper/: gradle-wrapper.properties
Lesson5/: README.md
Lesson6/: README.md
MqttNdk/: README.md  build.gradle.kts  settings.gradle.kts
MqttNdk/app/: build.gradle.kts
MqttNdk/app/src/androidTest/java/com/jiangc/mqttndk/: ExampleInstrumentedTest.java
MqttNdk/app/src/main/: AndroidManifest.xml
MqttNdk/app/src/main/java/com/jiangc/mqttndk/: MainActivity.java  Utils.java
MqttNdk/app/src/main/res/values/: strings.xml  themes.xml
MqttNdk/app/src/main/res/values-night/: themes.xml
MqttNdk/app/src/test/java/com/jiangc/mqttndk/: ExampleUnitTest.java
MqttNdk/gradle/wrapper/: gradle-wrapper.properties
MqttNdk/mqtt/: build.gradle
MqttNdk/mqtt/src/androidTest/java/com/ecarx/mqtt/: ExampleInstrumentedTest.java
MqttNdk/mqtt/src/main/cpp/: CMakeLists.txt  Logging.h  mqtt.cpp
MqttNdk/mqtt/src/main/cpp/mqttsrc/: VersionInfo.h
MqttNdk/mqtt/src/main/cpp/openssl/armeabi-v7a/include/openssl/: configuration.h
MqttNdk/mqtt/src/main/cpp/openssl/x86/include/openssl/: configuration.h
MqttNdk/mqtt/src/main/cpp/openssl/x86_64/include/openssl/: configuration.h
MqttNdk/mqtt/src/main/java/com/ecarx/mqtt/: MqttManager.java
MqttNdk/mqtt/src/test/java/com/ecarx/mqtt/: ExampleUnitTest.java
NdkCall/: README.md  settings.gradle
NdkCall/app/: build.gradle
NdkCall/app/src/androidTest/java/com/jiangc/ndkcall/: ExampleInstrumentedTest.java
NdkCall/app/src/main/: AndroidManifest.xml
NdkCall/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NdkCall/app/src/main/java/com/jiangc/ndkcall/: MainActivity.java  TestJni.java
NdkCall/app/src/main/res/values/: strings.xml  themes.xml
NdkCall/app/src/main/res/values-night/: themes.xml
NdkCall/app/src/test/java/com/jiangc/ndkcall/: ExampleUnitTest.java
NdkCall/gradle/wrapper/: gradle-wrapper.properties
SecondLesson/doc/: cmake.md
SecondLesson/example2/: cmake.md
SecondLesson/example2/app/: build.gradle
SecondLesson/example2/app/src/main/cpp/: CMakeLists.txt
SecondLesson/example2/app/src/main/cpp/test/: CMakeLists.txt
mmkv/: README.md  settings.gradle
mmkv/app/: build.gradle
mmkv/app/src/androidTest/java/com/jiangc/mmkv/: ExampleInstrumentedTest.java
mmkv/app/src/main/: AndroidManifest.xml
mmkv/app/src/main/java/com/jiangc/mmkv/: MainActivity.java
mmkv/app/src/main/res/values/: strings.xml  themes.xml
mmkv/app/src/main/res/values-night/: themes.xml
mmkv/app/src/test/java/com/jiangc/mmkv/: ExampleUnitTest.java
mmkv/mmkv/: build.gradle
mmkv/mmkv/src/androidTest/java/com/jiangc/mmkv/: ExampleInstrumentedTest.java
mmkv/mmkv/src/main/cpp/: CMakeLists.txt  mmkv.cpp
mmkv/mmkv/src/main/cpp/Core/: core.vcxproj
mmkv/mmkv/src/main/java/com/jiangc/mmkv/: NativeLib.java
ndkdr/: README.md  settings.gradle.kts
ndkdr/app/: build.gradle.kts
ndkdr/app/src/main/: AndroidManifest.xml
ndkdr/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ndkdr/app/src/main/java/com/jiangc/ndkdr/: MainActivity.java
ndkdr/app/src/main/res/values/: strings.xml  themes.xml
ndkdr/app/src/main/res/values-night/: themes.xml
ndkdr/gradle/wrapper/: gradle-wrapper.properties
ndkthread/: settings.gradle.kts
ndkthread/app/: build.gradle.kts
ndkthread/app/src/androidTest/java/com/jiangc/ndkthread/: ExampleInstrumentedTest.java
ndkthread/app/src/main/: AndroidManifest.xml
ndkthread/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ndkthread/app/src/main/java/com/jiangc/ndkthread/: MainActivity.java
ndkthread/app/src/main/res/values/: strings.xml  themes.xml
ndkthread/app/src/main/res/values-night/: themes.xml
ndkthread/app/src/test/java/com/jiangc/ndkthread/: ExampleUnitTest.java
ndkthread/gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
